--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
-          name: Snake Boxes
+          name: Snake Boxes-${{ matrix.targetPlatform }}
           path: build/${{ matrix.targetPlatform }}
